Hands-on lab/lab-files/ARM-template/azure-deploy.json
{
    "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.1",
  "parameters": {
    "sqlVMDestinationName": {
      "defaultValue": "SqlDestServer",
      "type": "string",
      "maxLength": 13,
      "metadata": {
        "description": "Enter name to assign to the Azure VM running SQL Server. The name can contain only lowercase letters, numbers, and '-', but can't start or end with '-' or have more than 13 characters."
      }
    },
    "adminUsername": {
      "defaultValue": "sqladmin",
      "type": "string",
      "metadata": {
        "description": "Administrator user name for logging into the virtual machine and SQL Server."
      }
    },
    "adminPassword": {
      "defaultValue": "Password.1234567890",
      "type": "securestring",
      "minLength": 16,
      "maxLength": 128,
      "metadata": {
        "description": "The password must be between 16 and 128 characters in length and must contain at least one number, one non-alphanumeric character, and one upper or lower case letter. Default value is Password.1234567890"
      }
    }
  },
  "variables": {
    "location": "[resourceGroup().location]",
    "virtualMachineSize": "Standard_D2s_v3",
    "uniqueManagedInstanceName": "[concat(variables('sqlVMDestinationName'), '-', uniqueString(resourceGroup().id))]",
    "storageAccountName": "[concat('sqlstore', uniqueString(resourceGroup().id))]",
    "username": "[parameters('adminUsername')]",
    "skuName": "BC_Gen5",
    "skuEdition": "BusinessCritical",
    "licenseType": "LicenseIncluded",
    "hardwareFamily": "Gen5",
    "publicDataEndpointEnabled": false,
    "timezoneId": "UTC",
    "networkSecurityGroupName": "[concat(variables('sqlVMDestinationName'), '-nsg')]",
    "sqlVMDestinationSize": "Standard_D2s_v3",
    "sqlVMDestinationName": "[parameters('sqlVMDestinationName')]",
    "destinationNSGName": "[concat(variables('sqlVMDestinationName'), '-nsg')]",
    "destinationPIPName": "[concat(variables('sqlVMDestinationName'), '-pip')]",
    "destinationNICName": "[concat(variables('sqlVMDestinationName'), '-nic')]",
    "jbVirtualMachineName": "JumpBox",
    "jbNetworkSecurityGroupName": "[concat(variables('jbVirtualMachineName'), '-nsg')]",
    "jbNetworkInterfaceName": "[concat(variables('jbVirtualMachineName'), '-nic')]",
    "jbPublicIpAddressName": "[concat(variables('jbVirtualMachineName'), '-ip')]",
    "sqlVirtualMachineName": "SqlServer2008",
    "sqlNetworkSecurityGroupName": "[concat(variables('sqlVirtualMachineName'), '-nsg')]",
    "sqlNetworkInterfaceName": "[concat(variables('sqlVirtualMachineName'), '-nic')]",
    "sqlPublicIpAddressName": "[concat(variables('sqlVirtualMachineName'), '-ip')]",
    "virtualNetworkGatewayName": "[concat(resourceGroup().name, '-vnet-gateway')]",
    "vgPublicIpAddressName": "vnet-gateway-ip",
    "vgGatewayType": "Vpn",
    "vgVpnType": "RouteBased",
    "routeTableName": "[concat(resourceGroup().name, '-route-table')]",
    "virtualNetworkName": "[concat(resourceGroup().name, '-vnet')]",
    "addressPrefix": "10.17.0.0/16",
    "subnetName": "ManagedInstance",
    "subnetPrefix": "10.17.0.0/24",
    "gatewaySubnetName": "GatewaySubnet",
    "gatewaySubnetPrefix": "10.17.2.0/24",
    "managementSubnetName": "Management",
    "managementSubnetPrefix": "10.17.1.0/24",
    "jbCustomScriptFileName": "configure-jumpbox.ps1",
    "jbCustomScriptUri": "[concat('https://raw.githubusercontent.com/microsoft/Migrating-SQL-databases-to-Azure/master/Hands-on%20lab/lab-files/ARM-template/', variables('jbCustomScriptFileName'))]",
    "sqlCustomScriptFileName": "configure-sqlvm.ps1",
    "sqlCustomScriptUri": "[concat('https://raw.githubusercontent.com/microsoft/Migrating-SQL-databases-to-Azure/master/Hands-on%20lab/lab-files/ARM-template/', variables('sqlCustomScriptFileName'))]",
    "appServicePlanName": "[concat(resourceGroup().name, '-asp')]",
    "webAppName": "[concat('tailspintoys', uniqueString(resourceGroup().id))]",
    "dmsName": "tailspin-dms",
    "sqlDestDataDisks": {
      "value": [
        {
          "lun": 0,
          "createOption": "empty",
          "caching": "ReadOnly",
          "writeAcceleratorEnabled": false,
          "id": null,
          "name": null,
          "storageAccountType": "Premium_LRS",
          "diskSizeGB": 1023
        }
      ]
    }

  },
  "resources": [
    {
      "name": "[variables('sqlVMDestinationName')]",
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2019-03-01",
      "location": "[variables('location')]",
      "dependsOn": [
        "[concat('Microsoft.Network/networkInterfaces/', variables('destinationNICName'))]",
        "[concat('Microsoft.Storage/storageAccounts/', variables('storageAccountName'))]"
      ],
      "properties": {
        "hardwareProfile": {
          "vmSize": "[variables('sqlVMDestinationSize')]"
        },
        "storageProfile": {
          "osDisk": {
            "createOption": "fromImage",
            "managedDisk": {
              "storageAccountType": "Premium_LRS"
            }
          },
          "imageReference": {
            "publisher": "MicrosoftSQLServer",
            "offer": "SQL2017-WS2016",
            "sku": "Standard",
            "version": "latest"
          },
          "copy": [
            {
              "name": "dataDisks",
              "count": "[length(variables('sqlDestDataDisks'))]",
              "input": {
                "lun": "[variables('sqlDestDataDisks')[copyIndex('dataDisks')].lun]",
                "createOption": "[variables('sqlDestDataDisks')[copyIndex('dataDisks')].createOption]",
                "caching": "[variables('sqlDestDataDisks')[copyIndex('dataDisks')].caching]",
                "writeAcceleratorEnabled": "[variables('sqlDestDataDisks')[copyIndex('dataDisks')].writeAcceleratorEnabled]",
                "diskSizeGB": "[variables('sqlDestDataDisks')[copyIndex('dataDisks')].diskSizeGB]",
                "managedDisk": {
                  "id": "[coalesce(variables('sqlDestDataDisks')[copyIndex('dataDisks')].id, if(equals(variables('sqlDestDataDisks')[copyIndex('dataDisks')].name, json('null')), json('null'), resourceId('Microsoft.Compute/disks', variables('sqlDestDataDisks')[copyIndex('dataDisks')].name)))]",
                  "storageAccountType": "[variables('sqlDestDataDisks')[copyIndex('dataDisks')].storageAccountType]"
                }
              }
            }
          ]
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('destinationNICName'))]"
            }
          ]
        },
        "osProfile": {
          "computerName": "[variables('sqlVMDestinationName')]",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPassword')]",
          "windowsConfiguration": {
            "enableAutomaticUpdates": true,
            "provisionVmAgent": true
          }
        },
        "diagnosticsProfile": {
          "bootDiagnostics": {
            "enabled": true,
            "storageUri": "[concat('https://', variables('storageAccountName'), '.blob.core.windows.net/')]"
          }
        }
      }
    },
    {
      "name": "[variables('destinationNICName')]",
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2018-10-01",
      "location": "[variables('location')]",
      "dependsOn": [
        "[concat('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]",
        "[concat('Microsoft.Network/publicIpAddresses/', variables('destinationPIPName'))]"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "subnet": {
                "id": [ "resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworkName'), variables('SubnetName'))" ]
              },
              "privateIPAllocationMethod": "Dynamic",
              "publicIpAddress": {
                "id": "[resourceId(resourceGroup().name, 'Microsoft.Network/publicIpAddresses', variables('destinationPIPName'))]"
              }
            }
          }
        ],
        "enableAcceleratedNetworking": "false"
      }
    },
    {
      "name": "[variables('destinationPIPName')]",
      "type": "Microsoft.Network/publicIpAddresses",
      "apiVersion": "2019-02-01",
      "location": "[variables('location')]",
      "properties": {
        "publicIpAllocationMethod": "Dynamic"
      },
      "sku": {
        "name": "Basic"
      }
    },
    {
      "name": "[variables('sqlVMDestinationName')]",
      "type": "Microsoft.SqlVirtualMachine/SqlVirtualMachines",
      "apiVersion": "2017-03-01-preview",
      "location": "[variables('location')]",
      "properties": {
        "virtualMachineResourceId": "[resourceId('Microsoft.Compute/virtualMachines', variables('sqlVMDestinationName'))]",
        "sqlManagement": "Full",
        "SqlServerLicenseType": "PAYG",
        "AutoPatchingSettings": {
          "Enable": true,
          "DayOfWeek": "Sunday",
          "MaintenanceWindowStartingHour": "2",
          "MaintenanceWindowDuration": "60"
        },
        "KeyVaultCredentialSettings": {
          "Enable": false,
          "CredentialName": ""
        },
        "ServerConfigurationsManagementSettings": {
          "SQLConnectivityUpdateSettings": {
            "ConnectivityType": "Private",
            "Port": 1433,
            "SQLAuthUpdateUserName": "",
            "SQLAuthUpdatePassword": ""
          },
          "SQLWorkloadTypeUpdateSettings": {
            "SQLWorkloadType": "GENERAL"
          },
          "SQLStorageUpdateSettings": {
            "DiskCount": 1,
            "DiskConfigurationType": "NEW",
            "StartingDeviceID": 2
          },
          "AdditionalFeaturesServerConfigurations": {
            "IsRServicesEnabled": "false"
          }
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Compute/virtualMachines', variables('sqlVirtualMachineName'))]"
      ]
    },
    {
      "type": "Microsoft.DataMigration/services",
      "apiVersion": "2018-04-19",
      "name": "[variables('dmsName')]",
      "location": "[variables('location')]",
      "dependsOn": [
        "[variables('virtualNetworkName')]"
      ],
      "sku": {
        "name": "Premium_4vCores",
        "tier": "Premium",
        "size": "4 vCores"
      },
      "properties": {
        "virtualSubnetId": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworkName'), variables('managementSubnetName'))]"
      }
    },
    {
      "type": "Microsoft.Storage/storageAccounts",
      "apiVersion": "2019-04-01",
      "name": "[variables('storageAccountName')]",
      "location": "[variables('location')]",
      "sku": {
        "name": "Standard_LRS",
        "tier": "Standard"
      },
      "kind": "StorageV2",
      "properties": {
        "networkAcls": {
          "bypass": "AzureServices",
          "virtualNetworkRules": [],
          "ipRules": [],
          "defaultAction": "Allow"
        },
        "supportsHttpsTrafficOnly": true,
        "encryption": {
          "services": {
            "file": {
              "enabled": true
            },
            "blob": {
              "enabled": true
            }
          },
          "keySource": "Microsoft.Storage"
        },
        "accessTier": "Hot"
      }
    },
    {
      "name": "[variables('sqlVirtualMachineName')]",
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2019-03-01",
      "location": "[variables('location')]",
      "dependsOn": [
        "[concat('Microsoft.Network/networkInterfaces/', variables('sqlNetworkInterfaceName'))]"
      ],
      "properties": {
        "hardwareProfile": {
          "vmSize": "[variables('virtualMachineSize')]"
        },
        "storageProfile": {
          "osDisk": {
            "createOption": "FromImage",
            "managedDisk": {
              "storageAccountType": "Premium_LRS"
            }
          },
          "imageReference": {
            "publisher": "MicrosoftSQLServer",
            "offer": "SQL2008R2SP3-WS2008R2SP1",
            "sku": "Enterprise",
            "version": "latest"
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('sqlNetworkInterfaceName'))]"
            }
          ]
        },
        "osProfile": {
          "computerName": "[variables('sqlVirtualMachineName')]",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPassword')]",
          "windowsConfiguration": {
            "enableAutomaticUpdates": true,
            "provisionVmAgent": true
          }
        }
      },
      "resources": [
        {
          "name": "SetupSqlVm",
          "apiVersion": "2019-03-01",
          "type": "extensions",
          "location": "[variables('location')]",
          "properties": {
            "publisher": "Microsoft.Compute",
            "type": "CustomScriptExtension",
            "typeHandlerVersion": "1.9",
            "autoUpgradeMinorVersion": true,
            "settings": {
              "fileUris": [
                "[variables('sqlCustomScriptUri')]"
              ],
              "commandToExecute": "[concat('powershell -ExecutionPolicy Unrestricted -File ', variables('sqlCustomScriptFileName'))]"
            }
          },
          "dependsOn": [
            "[concat('Microsoft.Compute/virtualMachines/', variables('sqlVirtualMachineName'))]"
          ],
          "tags": {
            "displayName": "SetupSqlVm"
          }
        }
      ]
    },
    {
      "name": "[variables('jbVirtualMachineName')]",
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2019-03-01",
      "location": "[variables('location')]",
      "dependsOn": [
        "[concat('Microsoft.Network/networkInterfaces/', variables('jbNetworkInterfaceName'))]"
      ],
      "properties": {
        "hardwareProfile": {
          "vmSize": "[variables('virtualMachineSize')]"
        },
        "storageProfile": {
          "osDisk": {
            "createOption": "FromImage",
            "managedDisk": {
              "storageAccountType": "Premium_LRS"
            }
          },
          "imageReference": {
            "publisher": "microsoftvisualstudio",
            "offer": "visualstudio2019latest",
            "sku": "vs-2019-comm-latest-ws2019",
            "version": "latest"
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('jbNetworkInterfaceName'))]"
            }
          ]
        },
        "osProfile": {
          "computerName": "[variables('jbVirtualMachineName')]",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPassword')]",
          "windowsConfiguration": {
            "enableAutomaticUpdates": true,
            "provisionVmAgent": true
          }
        }
      },
      "resources": [
        {
          "name": "SetupJumpBox",
          "apiVersion": "2019-03-01",
          "type": "extensions",
          "location": "[variables('location')]",
          "properties": {
            "publisher": "Microsoft.Compute",
            "type": "CustomScriptExtension",
            "typeHandlerVersion": "1.9",
            "autoUpgradeMinorVersion": true,
            "settings": {
              "fileUris": [
                "[variables('jbCustomScriptUri')]"
              ],
              "commandToExecute": "[concat('powershell -ExecutionPolicy Unrestricted -File ', variables('jbCustomScriptFileName'))]"
            }
          },
          "dependsOn": [
            "[concat('Microsoft.Compute/virtualMachines/', variables('jbVirtualMachineName'))]"
          ],
          "tags": {
            "displayName": "SetupJumpBox"
          }
        }
      ]
    },
    {
      "type": "Microsoft.Web/serverfarms",
      "apiVersion": "2018-02-01",
      "name": "[variables('appServicePlanName')]",
      "location": "[variables('location')]",
      "sku": {
        "name": "S1",
        "tier": "Standard",
        "size": "S1",
        "family": "S",
        "capacity": 1
      },
      "tags": {},
      "properties": {
        "workerSize": 0,
        "workerSizeId": 0,
        "numberOfWorkers": 1
      }
    },
    {
      "type": "Microsoft.Web/sites",
      "apiVersion": "2018-11-01",
      "name": "[variables('webAppName')]",
      "location": "[variables('location')]",
      "dependsOn": [
        "[concat('Microsoft.Web/serverfarms/', variables('appServicePlanName'))]"
      ],
      "properties": {
        "enabled": true,
        "siteConfig": {
          "connectionStrings": [
            {
              "name": "TailspinToysContext",
              "connectionString": "[concat('Server=tcp:your-sqldest-host-fqdn-value,1433;Database=TailspinToys;User ID=',parameters('adminUsername'),';Password=Password.1234567890;Trusted_Connection=False;Encrypt=True;TrustServerCertificate=True;')]",
              "type": "SQLAzure"
            },
            {
              "name": "TailSpinToysReadOnlyContext",
              "connectionString": "[concat('Server=tcp:your-sqldest-host-fqdn-value,1433;Database=TailspinToys;User ID=',parameters('adminUsername'),';Password=Password.1234567890;Trusted_Connection=False;Encrypt=True;TrustServerCertificate=True;')]",
              "type": "SQLAzure"
            }
          ],
          "metadata": [
            {
              "name": "CURRENT_STACK",
              "value": "dotnetcore"
            }
          ],
          "alwaysOn": true
        },
        "serverFarmId": "[resourceId('Microsoft.Web/serverfarms/', variables('appServicePlanName'))]"
      }
    },
    {
      "name": "[variables('virtualNetworkName')]",
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2019-04-01",
      "location": "[variables('location')]",
      "dependsOn": [
        "[variables('routeTableName')]",
        "[variables('networkSecurityGroupName')]"
      ],
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('addressPrefix')]"
          ]
        },
        "subnets": [
          {
            "name": "[variables('subnetName')]",
            "properties": {
              "addressPrefix": "[variables('subnetPrefix')]",
              "routeTable": {
                "id": "[resourceId('Microsoft.Network/routeTables', variables('routeTableName'))]"
              },
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
              }
            }
          },
          {
            "name": "[variables('managementSubnetName')]",
            "properties": {
              "addressPrefix": "[variables('managementSubnetPrefix')]"
            }
          },
          {
            "name": "[variables('gatewaySubnetName')]",
            "properties": {
              "addressPrefix": "[variables('gatewaySubnetPrefix')]"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2019-04-01",
      "name": "[variables('virtualNetworkGatewayName')]",
      "type": "Microsoft.Network/virtualNetworkGateways",
      "location": "[variables('location')]",
      "dependsOn": [
        "[concat('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]",
        "[concat('Microsoft.Network/publicIPAddresses/', variables('vgPublicIpAddressName'))]"
      ],
      "tags": {},
      "properties": {
        "gatewayType": "[variables('vgGatewayType')]",
        "ipConfigurations": [
          {
            "name": "default",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "subnet": {
                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworkName'), variables('gatewaySubnetName'))]"
              },
              "publicIpAddress": {
                "id": "[resourceId(resourceGroup().name, 'Microsoft.Network/publicIPAddresses', variables('vgPublicIpAddressName'))]"
              }
            }
          }
        ],
        "vpnType": "[variables('vgVpnType')]",
        "sku": {
          "name": "VpnGw1",
          "tier": "VpnGw1",
          "capacity": 2
        }
      }
    },
    {
      "name": "[variables('jbNetworkInterfaceName')]",
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2019-04-01",
      "location": "[variables('location')]",
      "dependsOn": [
        "[concat('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]",
        "[concat('Microsoft.Network/publicIpAddresses/', variables('jbPublicIpAddressName'))]",
        "[concat('Microsoft.Network/networkSecurityGroups/', variables('jbNetworkSecurityGroupName'))]"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "subnet": {
                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworkName'), variables('managementSubnetName'))]"
              },
              "privateIPAllocationMethod": "Dynamic",
              "publicIpAddress": {
                "id": "[resourceId('Microsoft.Network/publicIpAddresses', variables('jbPublicIpAddressName'))]"
              }
            }
          }
        ],
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('jbNetworkSecurityGroupName'))]"
        }
      }
    },
    {
      "name": "[variables('sqlNetworkInterfaceName')]",
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2019-04-01",
      "location": "[variables('location')]",
      "dependsOn": [
        "[concat('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]",
        "[concat('Microsoft.Network/publicIpAddresses/', variables('sqlPublicIpAddressName'))]",
        "[concat('Microsoft.Network/networkSecurityGroups/', variables('sqlNetworkSecurityGroupName'))]"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "subnet": {
                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworkName'), variables('managementSubnetName'))]"
              },
              "privateIPAllocationMethod": "Dynamic",
              "publicIpAddress": {
                "id": "[resourceId('Microsoft.Network/publicIpAddresses', variables('sqlPublicIpAddressName'))]"
              }
            }
          }
        ],
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('sqlNetworkSecurityGroupName'))]"
        }
      }
    },
    {
      "name": "[variables('jbPublicIpAddressName')]",
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2019-04-01",
      "location": "[variables('location')]",
      "properties": {
        "publicIPAllocationMethod": "Dynamic"
      },
      "sku": {
        "name": "Basic"
      }
    },
    {
      "name": "[variables('sqlPublicIpAddressName')]",
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2019-04-01",
      "location": "[variables('location')]",
      "properties": {
        "publicIPAllocationMethod": "Dynamic"
      },
      "sku": {
        "name": "Basic"
      }
    },
    {
      "apiVersion": "2019-04-01",
      "type": "Microsoft.Network/publicIPAddresses",
      "name": "[variables('vgPublicIpAddressName')]",
      "location": "[variables('location')]",
      "properties": {
        "publicIPAllocationMethod": "Dynamic"
      }
    },
    {
      "type": "Microsoft.Network/routeTables",
      "name": "[variables('routeTableName')]",
      "apiVersion": "2019-06-01",
      "location": "[variables('location')]",
      "properties": {
        "disableBgpRoutePropagation": false,
        "routes": [
          {
            "name": "subnet-to-vnetlocal",
            "properties": {
              "addressPrefix": "[variables('subnetPrefix')]",
              "nextHopType": "VnetLocal"
            }
          },
          {
            "name": "mi-13-64-11-nexthop-internet",
            "properties": {
              "addressPrefix": "13.64.0.0/11",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-13-96-13-nexthop-internet",
            "properties": {
              "addressPrefix": "13.96.0.0/13",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-13-104-14-nexthop-internet",
            "properties": {
              "addressPrefix": "13.104.0.0/14",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-20-8-nexthop-internet",
            "properties": {
              "addressPrefix": "20.0.0.0/8",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-23-96-13-nexthop-internet",
            "properties": {
              "addressPrefix": "23.96.0.0/13",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-40-64-10-nexthop-internet",
            "properties": {
              "addressPrefix": "40.64.0.0/10",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-42-159-16-nexthop-internet",
            "properties": {
              "addressPrefix": "42.159.0.0/16",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-51-8-nexthop-internet",
            "properties": {
              "addressPrefix": "51.0.0.0/8",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-52-8-nexthop-internet",
            "properties": {
              "addressPrefix": "52.0.0.0/8",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-64-4-18-nexthop-internet",
            "properties": {
              "addressPrefix": "64.4.0.0/18",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-65-52-14-nexthop-internet",
            "properties": {
              "addressPrefix": "65.52.0.0/14",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-66-119-144-20-nexthop-internet",
            "properties": {
              "addressPrefix": "66.119.144.0/20",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-70-37-17-nexthop-internet",
            "properties": {
              "addressPrefix": "70.37.0.0/17",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-70-37-128-18-nexthop-internet",
            "properties": {
              "addressPrefix": "70.37.128.0/18",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-91-190-216-21-nexthop-internet",
            "properties": {
              "addressPrefix": "91.190.216.0/21",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-94-245-64-18-nexthop-internet",
            "properties": {
              "addressPrefix": "94.245.64.0/18",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-103-9-8-22-nexthop-internet",
            "properties": {
              "addressPrefix": "103.9.8.0/22",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-103-25-156-22-nexthop-internet",
            "properties": {
              "addressPrefix": "103.25.156.0/22",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-103-36-96-22-nexthop-internet",
            "properties": {
              "addressPrefix": "103.36.96.0/22",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-103-255-140-22-nexthop-internet",
            "properties": {
              "addressPrefix": "103.255.140.0/22",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-104-40-13-nexthop-internet",
            "properties": {
              "addressPrefix": "104.40.0.0/13",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-104-146-15-nexthop-internet",
            "properties": {
              "addressPrefix": "104.146.0.0/15",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-104-208-13-nexthop-internet",
            "properties": {
              "addressPrefix": "104.208.0.0/13",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-111-221-16-20-nexthop-internet",
            "properties": {
              "addressPrefix": "111.221.16.0/20",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-111-221-64-18-nexthop-internet",
            "properties": {
              "addressPrefix": "111.221.64.0/18",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-129-75-16-nexthop-internet",
            "properties": {
              "addressPrefix": "129.75.0.0/16",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-131-253-16-nexthop-internet",
            "properties": {
              "addressPrefix": "131.253.0.0/16",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-132-245-16-nexthop-internet",
            "properties": {
              "addressPrefix": "132.245.0.0/16",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-134-170-16-nexthop-internet",
            "properties": {
              "addressPrefix": "134.170.0.0/16",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-134-177-16-nexthop-internet",
            "properties": {
              "addressPrefix": "134.177.0.0/16",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-137-116-15-nexthop-internet",
            "properties": {
              "addressPrefix": "137.116.0.0/15",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-137-135-16-nexthop-internet",
            "properties": {
              "addressPrefix": "137.135.0.0/16",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-138-91-16-nexthop-internet",
            "properties": {
              "addressPrefix": "138.91.0.0/16",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-138-196-16-nexthop-internet",
            "properties": {
              "addressPrefix": "138.196.0.0/16",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-139-217-16-nexthop-internet",
            "properties": {
              "addressPrefix": "139.217.0.0/16",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-139-219-16-nexthop-internet",
            "properties": {
              "addressPrefix": "139.219.0.0/16",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-141-251-16-nexthop-internet",
            "properties": {
              "addressPrefix": "141.251.0.0/16",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-146-147-16-nexthop-internet",
            "properties": {
              "addressPrefix": "146.147.0.0/16",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-147-243-16-nexthop-internet",
            "properties": {
              "addressPrefix": "147.243.0.0/16",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-150-171-16-nexthop-internet",
            "properties": {
              "addressPrefix": "150.171.0.0/16",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-150-242-48-22-nexthop-internet",
            "properties": {
              "addressPrefix": "150.242.48.0/22",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-157-54-15-nexthop-internet",
            "properties": {
              "addressPrefix": "157.54.0.0/15",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-157-56-14-nexthop-internet",
            "properties": {
              "addressPrefix": "157.56.0.0/14",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-157-60-16-nexthop-internet",
            "properties": {
              "addressPrefix": "157.60.0.0/16",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-167-220-16-nexthop-internet",
            "properties": {
              "addressPrefix": "167.220.0.0/16",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-168-61-16-nexthop-internet",
            "properties": {
              "addressPrefix": "168.61.0.0/16",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-168-62-15-nexthop-internet",
            "properties": {
              "addressPrefix": "168.62.0.0/15",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-191-232-13-nexthop-internet",
            "properties": {
              "addressPrefix": "191.232.0.0/13",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-192-32-16-nexthop-internet",
            "properties": {
              "addressPrefix": "192.32.0.0/16",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-192-48-225-24-nexthop-internet",
            "properties": {
              "addressPrefix": "192.48.225.0/24",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-192-84-159-24-nexthop-internet",
            "properties": {
              "addressPrefix": "192.84.159.0/24",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-192-84-160-23-nexthop-internet",
            "properties": {
              "addressPrefix": "192.84.160.0/23",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-192-100-102-24-nexthop-internet",
            "properties": {
              "addressPrefix": "192.100.102.0/24",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-192-100-103-24-nexthop-internet",
            "properties": {
              "addressPrefix": "192.100.103.0/24",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-192-197-157-24-nexthop-internet",
            "properties": {
              "addressPrefix": "192.197.157.0/24",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-193-149-64-19-nexthop-internet",
            "properties": {
              "addressPrefix": "193.149.64.0/19",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-193-221-113-24-nexthop-internet",
            "properties": {
              "addressPrefix": "193.221.113.0/24",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-194-69-96-19-nexthop-internet",
            "properties": {
              "addressPrefix": "194.69.96.0/19",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-194-110-197-24-nexthop-internet",
            "properties": {
              "addressPrefix": "194.110.197.0/24",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-198-105-232-22-nexthop-internet",
            "properties": {
              "addressPrefix": "198.105.232.0/22",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-198-200-130-24-nexthop-internet",
            "properties": {
              "addressPrefix": "198.200.130.0/24",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-198-206-164-24-nexthop-internet",
            "properties": {
              "addressPrefix": "198.206.164.0/24",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-199-60-28-24-nexthop-internet",
            "properties": {
              "addressPrefix": "199.60.28.0/24",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-199-74-210-24-nexthop-internet",
            "properties": {
              "addressPrefix": "199.74.210.0/24",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-199-103-90-23-nexthop-internet",
            "properties": {
              "addressPrefix": "199.103.90.0/23",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-199-103-122-24-nexthop-internet",
            "properties": {
              "addressPrefix": "199.103.122.0/24",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-199-242-32-20-nexthop-internet",
            "properties": {
              "addressPrefix": "199.242.32.0/20",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-199-242-48-21-nexthop-internet",
            "properties": {
              "addressPrefix": "199.242.48.0/21",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-202-89-224-20-nexthop-internet",
            "properties": {
              "addressPrefix": "202.89.224.0/20",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-204-13-120-21-nexthop-internet",
            "properties": {
              "addressPrefix": "204.13.120.0/21",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-204-14-180-22-nexthop-internet",
            "properties": {
              "addressPrefix": "204.14.180.0/22",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-204-79-135-24-nexthop-internet",
            "properties": {
              "addressPrefix": "204.79.135.0/24",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-204-79-179-24-nexthop-internet",
            "properties": {
              "addressPrefix": "204.79.179.0/24",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-204-79-181-24-nexthop-internet",
            "properties": {
              "addressPrefix": "204.79.181.0/24",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-204-79-188-24-nexthop-internet",
            "properties": {
              "addressPrefix": "204.79.188.0/24",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-204-79-195-24-nexthop-internet",
            "properties": {
              "addressPrefix": "204.79.195.0/24",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-204-79-196-23-nexthop-internet",
            "properties": {
              "addressPrefix": "204.79.196.0/23",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-204-79-252-24-nexthop-internet",
            "properties": {
              "addressPrefix": "204.79.252.0/24",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-204-152-18-23-nexthop-internet",
            "properties": {
              "addressPrefix": "204.152.18.0/23",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-204-152-140-23-nexthop-internet",
            "properties": {
              "addressPrefix": "204.152.140.0/23",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-204-231-192-24-nexthop-internet",
            "properties": {
              "addressPrefix": "204.231.192.0/24",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-204-231-194-23-nexthop-internet",
            "properties": {
              "addressPrefix": "204.231.194.0/23",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-204-231-197-24-nexthop-internet",
            "properties": {
              "addressPrefix": "204.231.197.0/24",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-204-231-198-23-nexthop-internet",
            "properties": {
              "addressPrefix": "204.231.198.0/23",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-204-231-200-21-nexthop-internet",
            "properties": {
              "addressPrefix": "204.231.200.0/21",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-204-231-208-20-nexthop-internet",
            "properties": {
              "addressPrefix": "204.231.208.0/20",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-204-231-236-24-nexthop-internet",
            "properties": {
              "addressPrefix": "204.231.236.0/24",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-205-174-224-20-nexthop-internet",
            "properties": {
              "addressPrefix": "205.174.224.0/20",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-206-138-168-21-nexthop-internet",
            "properties": {
              "addressPrefix": "206.138.168.0/21",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-206-191-224-19-nexthop-internet",
            "properties": {
              "addressPrefix": "206.191.224.0/19",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-207-46-16-nexthop-internet",
            "properties": {
              "addressPrefix": "207.46.0.0/16",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-207-68-128-18-nexthop-internet",
            "properties": {
              "addressPrefix": "207.68.128.0/18",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-208-68-136-21-nexthop-internet",
            "properties": {
              "addressPrefix": "208.68.136.0/21",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-208-76-44-22-nexthop-internet",
            "properties": {
              "addressPrefix": "208.76.44.0/22",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-208-84-21-nexthop-internet",
            "properties": {
              "addressPrefix": "208.84.0.0/21",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-209-240-192-19-nexthop-internet",
            "properties": {
              "addressPrefix": "209.240.192.0/19",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-213-199-128-18-nexthop-internet",
            "properties": {
              "addressPrefix": "213.199.128.0/18",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-216-32-180-22-nexthop-internet",
            "properties": {
              "addressPrefix": "216.32.180.0/22",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "mi-216-220-208-20-nexthop-internet",
            "properties": {
              "addressPrefix": "216.220.208.0/20",
              "nextHopType": "Internet"
            }
          }
        ]
      }
    },
    {
      "name": "[variables('networkSecurityGroupName')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2019-06-01",
      "location": "[variables('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "management",
            "properties": {
              "description": "Allow inbound management traffic",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRanges": [
                "9000",
                "9003",
                "1438",
                "1440",
                "1452"
              ],
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "mi_subnet",
            "properties": {
              "description": "Allow inbound traffic inside the subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('subnetPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 200,
              "direction": "Inbound"
            }
          },
          {
            "name": "health_probe",
            "properties": {
              "description": "Allow health probe",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "AzureLoadBalancer",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 300,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow_tds_inbound",
            "properties": {
              "description": "Allow access to data",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "1433",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1000,
              "direction": "Inbound"
            }
          },
          {
            "name": "management_out",
            "properties": {
              "description": "Allow outbound management traffic",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRanges": [
                "80",
                "443",
                "12000"
              ],
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Outbound"
            }
          },
          {
            "name": "mi_subnet_out",
            "properties": {
              "description": "Allow outbound traffic inside the subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "[variables('subnetPrefix')]",
              "access": "Allow",
              "priority": 200,
              "direction": "Outbound"
            }
          }
        ]
      }
    },
    {
      "name": "[variables('jbNetworkSecurityGroupName')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2019-06-01",
      "location": "[variables('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "RDP",
            "properties": {
              "priority": 300,
              "protocol": "Tcp",
              "access": "Allow",
              "direction": "Inbound",
              "sourceApplicationSecurityGroups": [],
              "destinationApplicationSecurityGroups": [],
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "3389"
            }
          }
        ]
      }
    },
    {
      "name": "[variables('sqlNetworkSecurityGroupName')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2019-06-01",
      "location": "[variables('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "RDP",
            "properties": {
              "priority": 300,
              "protocol": "Tcp",
              "access": "Allow",
              "direction": "Inbound",
              "sourceApplicationSecurityGroups": [],
              "destinationApplicationSecurityGroups": [],
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "3389"
            }
          },
          {
            "name": "SqlServer",
            "properties": {
              "priority": 310,
              "protocol": "Tcp",
              "access": "Allow",
              "direction": "Inbound",
              "sourceApplicationSecurityGroups": [],
              "destinationApplicationSecurityGroups": [],
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "1433"
            }
          }
        ]
      }
    }
  ],
    "outputs": {
        "adminUsername": {
            "type": "string",
            "value": "[parameters('adminUsername')]"
        },
        "managedInstanceName": {
            "type": "string",
            "value": "[variables('uniqueManagedInstanceName')]"
        }
    }
}
